@@ -12,7 +12,6 @@ in
   config = lib.mkIf cfg.enable {
     programs = {
       mangohud.enable = lib.mkDefault true;
-      gamemode.enable = lib.mkDefault true;
       protonup-qt.enable = lib.mkDefault true;
       steam = {
         enable = true;
