@@ -1,3 +1,10 @@
+8-27-2025
+- remove gamemode from steam module
+- moved keybind for sway nc from $mainmod+shift+n to $mainmod+n for sway and hyprland
+- readded qemu to cypher
+- add libreoffice to cypher
+
+
 8-26-2025
 - move battery for windows-11 waybar to the left side
 
